--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
             Username:<br>
             <input type="text" name="username">
             <br> Password: <br>
-            <input type="text" name="password">
+            <input type="password" name="password">
             <input type="submit" value="Submit">
         </form>
     </body>
